  
  o Fixed bug in numSummary() that surfaced when only one quantile was specified (reported by Peter B. Mandeville).
  
  o Titles for sets of check boxes now left-aligned (suggestion of Milan Bouchet-Valat).
  
  o Fix to Spanish translation (courtesy of Manuel Munoz Marquez).
  
  o Fix to data set edit button, which was removing case names (reported by Gilles Le Pape).
  
  o Updated Slovenian translations (courtesy of Jaro Lajovic and Matjaz Jeran).
  
  o Updated Korean translation (courtesy of Shin Jong-Hwa).

Changes to Version 1.8-3

   o Small fixes to pass CRAN checks (reported by Kurt Hornik).

Changes to Version 1.8-2

   o Fixes to font selection, especially for non-Windows systems.
   
   o Fix to groupsBox() utility function (to fix bug reported by Richard Heiberger).
   
   o PDF files for "Getting Started" manual in English, Japanese, and Spanish compacted (suggestion of Brian Ripley).
   
   o Retain dialog selections optionally non-resettable, used for probability dialogs.
   
   o Bartlett's test and Levene's test now allow more than one factor.
   
   o Updated Slovenian translation (thanks to Jaro Lajovic and Matjaz Jeran).
   
   o Updated Korean translation (courtesy of Shin Jong-Hwa and the Korean translation team).
   
   o Fixed bug in scatterplot dialog that prevented log axes from being used with groups defined (reported by Kent Johnson).


Changes to Version 1.8-1

   o Updated DESCRIPTION file; version synchronization for CRAN.
   

Changes to Version 1.8-0

    o See CHANGES file for changes to older versions.
    
    o Concluded dialog-memory updates (with help of Kosar Karimi Pour). Rcmdr option retain.selections now set to TRUE by default.
   
    o Added confirmatory factor analysis.
   
    o Updated Italiian, Japanese, Romanian, Russian, and Spanish translations (thanks respectively to Stefano Calza, Takaharu Araki, Adrian Dusa, Alexey Shipunov, and Manuel Munoz Marquez).    